Fix for logo tap issue on iOS

--- a/wp-content/themes/osqledaren/assets/css/_about.scss
+++ b/wp-content/themes/osqledaren/assets/css/_about.scss
@@ -7,9 +7,9 @@
 	
 	#image {
 		background-color: #f0f0f0;
-		background-repeat: no-repeat;
+		/*background-repeat: no-repeat;
 		background-position: center center;
-		@include background-size(cover !important);
+		@include background-size(cover !important);*/
 	}
 	#image img {
 		width: auto;
