--- a/wp-content/themes/osqledaren/assets/css/_structure.scss
+++ b/wp-content/themes/osqledaren/assets/css/_structure.scss
@@ -9,6 +9,7 @@
 	margin: auto;
 }
 .padding {
+	margin-left: 0;
 	padding-left: 20px;
 	padding-right: 20px;
 }
